[gd_scene load_steps=8 format=2]

[ext_resource path="res://characters/enemies/enemy.tscn" type="PackedScene" id=1]
[ext_resource path="res://characters/enemies/swat/swat.gd" type="Script" id=2]
[ext_resource path="res://characters/enemies/swat/swat_normal.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]
resource_local_to_scene = true
extents = Vector2( 5, 7.5 )

[sub_resource type="CircleShape2D" id=2]
resource_local_to_scene = true
radius = 128.0

[sub_resource type="AnimationNodeStateMachinePlayback" id=4]

[sub_resource type="CircleShape2D" id=5]
radius = 8.0

[node name="Swat" instance=ExtResource( 1 )]
script = ExtResource( 2 )
max_hp = 6
hp = 6
dmg = 1

[node name="Sprite" parent="." index="0"]
position = Vector2( 0, -7 )
texture = ExtResource( 3 )
hframes = 4
vframes = 5
frame = 2

[node name="CollisionShape" parent="HitBox" index="0"]
position = Vector2( 0, -7.5 )
shape = SubResource( 1 )

[node name="CollisionShape2D" parent="DetectionZone" index="0"]
shape = SubResource( 2 )

[node name="AnimationTree" parent="." index="8"]
parameters/playback = SubResource( 4 )

[node name="SwatZone" type="Area2D" parent="." index="9"]
collision_layer = 0
collision_mask = 8
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="SwatZone" index="0"]
position = Vector2( 0, -7 )
shape = SubResource( 5 )

[connection signal="area_entered" from="SwatZone" to="." method="_on_SwatZone_area_entered"]

[editable path="HitBox"]
[editable path="DetectionZone"]
